tests/neg-custom-args/safe-init/simple-1a.scala
class Foo {
  val len = name.size           // error
  val name: String = "Jack"
}